lab1/Test/L1-A-4-69.output
Error Type B at Line 2
Error Type B at Line 3
Error Type B at Line 6
Error Type B at Line 6
Error Type B at Line 8
Error Type B at Line 8
Error Type B at Line 8
